--- a/project/src/main/resources/templates/fragments/footer.html
+++ b/project/src/main/resources/templates/fragments/footer.html
@@ -27,12 +27,12 @@
             
             <section class="footer-section">
                 <p class="footer-title">찾아 오시는길</p>
-                <p>서울 특별시 강남구 테헤란로 123 댕댕이 빌딩 5층</p>
+                <p>서울 특별시 강남구 테헤란로 123 PETHOUSE 빌딩 5층</p>
             </section>
 
             </div>
             <div class="footer-bottom">
-                © 2026 댕댕이 호텔. All rights reserved.
+                © 2026 PETHOUSE. All rights reserved.
             </div>
     </footer>
 </th:block>
