--- a/project/src/main/resources/templates/pet/reservation-detail.html
+++ b/project/src/main/resources/templates/pet/reservation-detail.html
@@ -19,6 +19,9 @@
 </head>
 <body>
 
+<div class="page-bg"></div>
+
+
 <th:block th:replace="~{fragments/header::header}"></th:block>
 
 <p class="reservation-text">Reservation</p>
