--- a/project/src/main/resources/static/css/reservation-detail.css
+++ b/project/src/main/resources/static/css/reservation-detail.css
@@ -1,9 +1,41 @@
+
+html, body, main, #wrap, .container{
+    background: transparent !important;
+}
+
+.reservation-wrapper{
+    background: transparent !important;
+}
+
+/* 전체 페이지 배경 이미지 */
+body::before{
+    content:"";
+    position: fixed;
+    top: -40px;
+    left: -40px;
+    right: -40px;
+    bottom: -40px;
+
+    background: url("/img/mainpage.jpg") center / cover no-repeat;
+    filter: blur(3px) brightness(0.7);
+    z-index: -1;
+}
+
+
+body{
+    min-height: 100vh;
+    background: transparent;
+    padding-top: 72px;
+}
+
+
+
 .reservation-text {
-    font-size: 38px;       /* 글씨 크기, 필요하면 조절 */
-    font-weight: 150;     /* 글씨 두께 */
+    font-size: 50px;       /* 글씨 크기, 필요하면 조절 */
+    font-weight: 500;     /* 글씨 두께 */
     text-align: center;    /* 가로 중앙 정렬 */
     margin: 30px 0 30px 0; /* 위쪽 40px, 아래쪽 20px 여백 */
-    color: #333;           /* 글씨 색상 */
+    color: white;           /* 글씨 색상 */
     font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -28,7 +60,7 @@
     background:white;
     padding:25px;
     border-radius:16px;
-    border:1px solid #eaeaea;
+    border:2px solid white;
     box-shadow:0 6px 18px rgba(0,0,0,0.06);
 }
 
@@ -68,18 +100,21 @@
 .info-box{
     margin-top:20px;
     background:#f8f8f8;
+    color: black;
     padding:15px;
+    font-weight: 400;
     border-radius:10px;
     font-size:14px;
     line-height:1.6;
 }
+
 
 /* 오른쪽 객실 카드 */
 .reservation-detail {
     flex: 1;             /* 남은 공간 모두 사용 */
     background: white;
     border-radius: 18px;
-    border: 1px solid #eaeaea;
+    /* border: 1px solid #eaeaea; */
     box-shadow: 0 8px 25px rgba(0,0,0,0.08);
     overflow: hidden;
     display: flex;
@@ -201,7 +236,7 @@
 }
 .summary-btn:hover{
     font-size: 20px;
-    font-weight: 800;
+    /* font-weight: 800; */
 }
 
 /* flatpickr 금지(🚫) 커서 완전 제거 */
@@ -253,8 +288,19 @@
     min-width:18px;
 }
 .hotelservicetext{
-    margin-top: 10px;
+    margin-top: 20px;
+    color: #222;
+    font-weight: 600;
+    background-color: white;
+
+    display: inline-block;   /* 🔥 글자 크기만큼만 배경 */
+    padding: 6px 14px;       /* 배경 여백 */
+    border-radius: 8px;     /* 둥근 테두리 */
+    /* border: 1px solid #222; */
+    font-size: 16px;        /* 필요 시 조절 */
+    margin-bottom: 2px;
 }
+
 
 /* 호텔 추가 서비스 영역 */
 .service-list {
