--- a/project/src/main/resources/templates/login/join.html
+++ b/project/src/main/resources/templates/login/join.html
@@ -69,7 +69,7 @@
             
                         <div class="d-grid gap-2">
                             <button type="button" class="btn btn-lg btn-dark w-100 py-2" onclick="submitForm()">회원가입</button>
-                            <a href="/" class="btn btn-lg btn-success w-100 py-2 ">메인</a>
+                            <a href="/" class="btn btn-lg btn-outline-dark w-100 py-2 ">메인</a>
                         </div>
                     </form>
                 </main>
