--- a/project/src/main/resources/templates/mypage/mypage.html
+++ b/project/src/main/resources/templates/mypage/mypage.html
@@ -47,6 +47,7 @@
       <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editModal">
         정보 수정
       </button>
+      <button class="btn btn-outline-danger" onclick="deleteInfo()">회원탈퇴</button>
     </div>
   </section>
 
