--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
             <li><a href="/pet/reservation">예약</a></li>
             <li><a href="/noticelist">공지사항</a></li>
             <li><a href="/service">서비스</a></li>
-            <li><a href="/introduce">소개</a></li>
+            <li><a href="/pet/introduce">소개</a></li>
         </ul>
 
         <ul>
