--- a/project/src/main/resources/templates/pet/reservation-detail.html
+++ b/project/src/main/resources/templates/pet/reservation-detail.html
@@ -69,7 +69,8 @@
         </div>
 
         <div class="reservation-detail">
-            <img th:src="@{'/img/' + ${room.img}}" class="room-detail-image">
+            <!-- <img th:src="@{'/img/' + ${room.img}}" class="room-detail-image"> -->
+            <img th:src="@{'/upload/' + ${room.img}}" class="room-detail-image" th:alt="${room.roomNo} + ' 이미지'">
             <h2 class="room-title" th:text="${room.roomType} + ' Room' "></h2>
 
             <ul class="room-features">
