--- a/project/src/main/resources/templates/admin/ad_trainerupdate.html
+++ b/project/src/main/resources/templates/admin/ad_trainerupdate.html
@@ -67,7 +67,7 @@ body { background-color: #f5f6f7; }
                                     <div class="mt-2">
                                         <small class="text-muted">기존 이미지:</small><br>
                                         <img th:if="${trainer.img != null}" 
-                                            th:src="@{'/uploads/' + ${trainer.img}}" 
+                                            th:src="@{'/upload/' + ${trainer.img}}" 
                                             alt="기존 이미지" 
                                             style="width:200px; height:auto; border:1px solid #ddd; padding:2px; border-radius:4px;">
                                     </div>
