--- a/project/src/main/resources/templates/pet/reservation.html
+++ b/project/src/main/resources/templates/pet/reservation.html
@@ -61,7 +61,7 @@
             <div class="reservation-card">
                 <!-- 객실 이미지 -->
                 <!-- <img th:src="@{'/img/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'"> -->
-                <img th:src="@{'/upload/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'">
+                <img th:src="@{'/uploads/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'">
                 <!-- <img th:src="@{'/uploads/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'"> -->
                 <!-- <img th:src="@{'/img/' + ${room.img}}" class="room-detail-image"> -->
 
