--- a/project/src/main/resources/templates/mypage/mypage copy.html
+++ b/project/src/main/resources/templates/mypage/mypage copy.html
@@ -59,6 +59,7 @@
                 <li class="list-group-item"><i class="fas fa-envelope"></i> 이메일: <span id="email"></span></li>
                 <li class="list-group-item"><i class="fas fa-phone"></i> 전화번호: <span id="phone"></span></li>
                 <li class="list-group-item"><i class="fas fa-map-marker-alt"></i> 주소: <span id="address"></span></li>
+                <li class="list-group-item"><i class="fas fa-map-marker-alt"></i> 상세 주소: <span id="detailAddress"></span></li>
             </ul>
             <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editModal">
                 정보 수정
@@ -90,6 +91,8 @@
             <input type="date" id="editBirth" class="form-control mb-2"/>         
             <lable>주소</lable>
             <input id="editAddress" class="form-control mb-2" placeholder="주소">
+            <lable>상세주소</lable>
+            <input id="editDetailAddress" class="form-control mb-2" placeholder="상세주소">
           </div>
 
           <div class="modal-footer">
