안중요한거

--- a/project/src/main/resources/templates/mypage/mypage.html
+++ b/project/src/main/resources/templates/mypage/mypage.html
@@ -314,8 +314,17 @@
       </div>
   </section>
 
+   <!-- ========================================================================================================================= -->
 
- 
+<!--     <section class="mypage-reservations">
+    <div class="mypage-reservations-inner">
+      <h3>호텔 예약 내역</h3>
+
+      <div id="reservationCardsContainer" class="reservation-card-list"></div>
+
+    </div>
+  </section> -->
+
 
 
 
@@ -421,6 +430,7 @@
   <!-- <script src="/js/mypagePet.js"></script> -->
   <script src="/js/mypagePetApi.js"></script>
   <script src="/js/mypagePetUi.js"></script>
+  <!-- <script src="/js/mypageReservation.js"></script> -->
   <!-- ✅ 예약 수정 JavaScript -->
 <script>
 let checkinPicker, checkoutPicker;
