--- a/project/src/main/resources/templates/pet/reservation.html
+++ b/project/src/main/resources/templates/pet/reservation.html
@@ -21,38 +21,39 @@
     <p class="reservation-text">Room List</p>
 
     <!-- 필터 영역 -->
-    <div class="reservation-filter" style="margin: 20px; display:flex; gap:10px; align-items:center;">
-        <form th:action="@{/pet/reservation}" method="get" style="display:flex; gap:10px; align-items:center;">
-            <!-- 정렬 선택 -->
-            <label>
-                <select class="filter-select" name="sort">
-                    <option th:value="default" th:selected="${selectedSort=='default'}">가격 순</option>
-                    <option th:value="priceAsc" th:selected="${selectedSort=='priceAsc'}">저렴한 순</option>
-                    <option th:value="priceDesc" th:selected="${selectedSort=='priceDesc'}">비싼 순</option>
-                </select>
-            </label>
-
-            <!-- 견종 선택 -->
-            <label>
-                <select class="filter-select" name="sizeType">
-                    <option th:value="all" th:selected="${selectedSizeType=='all'}">견종</option>
-                    <option th:value="소형견" th:selected="${selectedSizeType=='소형견'}">소형견</option>
-                    <option th:value="중형견" th:selected="${selectedSizeType=='중형견'}">중형견</option>
-                    <option th:value="대형견" th:selected="${selectedSizeType=='대형견'}">대형견</option>
-                </select>
-            </label>
-
-            <!-- 예약 상태 선택 -->
-            <label>
-                <select class="filter-select" name="status">
-                    <option th:value="all" th:selected="${selectedStatus=='all'}">예약상태</option>
-                    <option th:value="예약가능" th:selected="${selectedStatus=='예약가능'}">예약가능</option>
-                    <option th:value="예약불가" th:selected="${selectedStatus=='예약불가'}">예약불가</option>
-                </select>
-            </label>
-
-            <button type="submit" class="filter-apply-btn">적용</button>
-        </form>
+     <div class="top-bar">
+         <div class="reservation-filter" style="margin: 20px; display:flex; gap:10px; align-items:center;">
+            <form th:action="@{/pet/reservation}" method="get" style="display:flex; gap:10px; align-items:center;">
+                <!-- 정렬 선택 -->
+                <label>
+                    <select class="filter-select" name="sort">
+                        <option th:value="default" th:selected="${selectedSort=='default'}">가격 순</option>
+                        <option th:value="priceAsc" th:selected="${selectedSort=='priceAsc'}">저렴한 순</option>
+                        <option th:value="priceDesc" th:selected="${selectedSort=='priceDesc'}">비싼 순</option>
+                    </select>
+                </label>
+                
+                <!-- 견종 선택 -->
+                <label>
+                    <select class="filter-select" name="sizeType">
+                        <option th:value="all" th:selected="${selectedSizeType=='all'}">견종</option>
+                        <option th:value="소형견" th:selected="${selectedSizeType=='소형견'}">소형견</option>
+                        <option th:value="중형견" th:selected="${selectedSizeType=='중형견'}">중형견</option>
+                        <option th:value="대형견" th:selected="${selectedSizeType=='대형견'}">대형견</option>
+                    </select>
+                </label>
+                
+                <!-- 예약 상태 선택 -->
+                <label>
+                    <select class="filter-select" name="status">
+                        <option th:value="all" th:selected="${selectedStatus=='all'}">예약상태</option>
+                        <option th:value="예약가능" th:selected="${selectedStatus=='예약가능'}">예약가능</option>
+                        <option th:value="예약불가" th:selected="${selectedStatus=='예약불가'}">예약불가</option>
+                    </select>
+                </label>
+                <button type="submit" class="filter-apply-btn">적용</button>
+            </form>
+        </div>
     </div>
 
     <!-- 객실 카드 리스트 -->
@@ -61,7 +62,7 @@
             <div class="reservation-card">
                 <!-- 객실 이미지 -->
                 <!-- <img th:src="@{'/img/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'"> -->
-                <img th:src="@{'/upload/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'">
+                <img th:src="@{'/uploads/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'">
                 <!-- <img th:src="@{'/uploads/' + ${room.img}}" class="room-image" th:alt="${room.roomNo} + ' 이미지'"> -->
                 <!-- <img th:src="@{'/img/' + ${room.img}}" class="room-detail-image"> -->
 
