매출 예약 테이터 베이스ㅜ 연결 하기

--- a/project/src/main/resources/templates/admin/ad_trainerinsert.html
+++ b/project/src/main/resources/templates/admin/ad_trainerinsert.html
@@ -66,7 +66,7 @@ body { background-color: #f5f6f7; }
                     </div>
 
                     <div class="d-flex justify-content-end gap-2">
-                        <a href="ad_trainer.html" class="btn btn-secondary">목록으로</a>
+                        <a href="/admin/trainer" class="btn btn-secondary">목록으로</a>
                         <button type="submit" class="btn btn-primary">등록하기</button>
                     </div>
                 </form>
